add scaffold codegenerator

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Data Source=MvcMovieContext-547030f4-8a69-4e66-ae84-fa6abd45edd7.db"
+  }
 }
